<resources>
    <string name="app_name">cscan</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="camscanner">CamScanner</string>
    <string name="noDocumentScan">No Document Scanned Yet.</string>
    <string name="scanner">Scanner</string>
    <string name="camera_permission_confirmation">This app demonstrates the usage of CameraView. In order to do that, it needs permission to access camera</string>
    <string name="camera_permission_not_granted">"  private static final String FRAGMENT_DIALOG = \"dialog\";"</string>
    <string name="retake">Retake</string>
    <string name="rotateDoc">RotateDoc</string>
    <string name="cropDocument">Crop Document</string>
    <string name="saveToGallery">Save to Gallery</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="ok">OK</string>
    <string name="DocumentName">Document Name</string>
    <string name="enterDocumentName">Enter Document Name</string>
    <string name="cancel">Cancel</string>
    <string name="areUSure">Are you sure ?</string>
    <string name="deleteThisDoc">You want to delete this Document ?</string>
    <string name="saveAsPdf">Save as pdf</string>
    <string name="share">Share</string>
    <string name="username">username</string>
    <string name="repassword">repassword</string>
    <string name="phonenumber">Phone number</string>
    <string name="createNewFolder">Create New Folder</string>
    <string name="enterFolderName">Enter folder name</string>
    <string name="create">Create</string>

    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="saveAsDoc">Save as doc</string>
    <string name="copied">Copied</string>
    <string name="processing___">processing...\n</string>
    <string name="nothing">Ai could not find anything</string>
    <string name="ocr">OCR</string>
    <string name="photo">Photo\n</string>
    <string name="copy">Copy</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
</resources>