<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activity.Login">

    <TextView
        android:text="@string/camscanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:textSize="30sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_txt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Username (or email/phonenumber)" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_txt_pass"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginRight="60dp"/>
        <Button
            android:id="@+id/btnRegInLayoutLog"
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        android:id="@+id/linkTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Quên mật khẩu?"
        android:textColor="@android:color/holo_blue_dark"
        android:clickable="true"
        android:onClick="onLinkClicked"
        android:textSize="18dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp">
        <ImageButton
            android:id="@+id/btn_img_gg"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/icongg"
            android:contentDescription="Circle Image"
            android:onClick="onImageButtonClicked"
            android:layout_marginStart="115dp"
            />

        <Space
            android:layout_width="40dp"
            android:layout_height="match_parent" />

        <ImageButton
            android:id="@+id/btn_img_fb"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/iconfb"
            android:contentDescription="Circle Image"
            android:onClick="onImageButtonClicked"
            android:layout_marginStart="1dp"/>
    </LinearLayout>


</LinearLayout>