<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="@color/dialog_bg_color"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:text="@string/DocumentName"
                        android:textColor="@color/txt_color"
                        android:textSize="15dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/et_bg"
                    android:paddingTop="11dp"
                    android:paddingBottom="11dp">

                    <EditText
                        android:id="@+id/et_group_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:background="@color/transparent"
                        android:cursorVisible="true"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz_ 0123456789"
                        android:focusable="true"
                        android:hint="@string/enterDocumentName"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:textColor="#000"
                        android:textColorHint="@color/unselected_txt_color"
                        android:textSize="12dp" />
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="4dp">

                <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/tv_done"
                    android:padding="11dp"
                    android:text="@string/cancel"
                    android:textColor="@color/light_txt_color"
                    android:textSize="13dp" />

                <TextView
                    android:id="@+id/tv_done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:padding="11dp"
                    android:text="@string/ok"
                    android:textColor="@color/light_txt_color"
                    android:textSize="13dp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
