<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="5dp"
    android:background="@drawable/border_red"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="@color/dialog_bg_color"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">



                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:padding="5dp"
                        android:text="@string/delete"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:textColor="@color/txt_color"
                        android:textSize="15dp" />

                    <ImageView
                        android:id="@+id/iv_close"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="7dp"
                        android:padding="4dp"
                        android:src="@drawable/ic_close_black_24dp"
                        android:tint="@color/txt_color" />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/areUSure"
                    android:textColor="@color/unselected_txt_color"
                    android:textSize="13dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="7dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/deleteThisDoc"
                    android:textColor="@color/unselected_txt_color"
                    android:textSize="13dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="12dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_delete"
                    android:layout_width="110dp"
                    android:layout_height="30dp"
                    android:background="@drawable/done_btn_bg"
                    android:gravity="center"
                    android:text="@string/delete"
                    android:textColor="@color/white"
                    android:textSize="13dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
