<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="@color/dialog_bg_color"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"

                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/createNewFolder"
                        android:textColor="@color/txt_color"
                        android:textSize="15dp" />

                    <ImageView
                        android:id="@+id/iv_close"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="7dp"
                        android:padding="4dp"
                        android:src="@drawable/ic_close_black_24dp"
                        app:tint="@color/txt_color" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/et_bg"
                    android:paddingTop="11dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"

                    android:paddingBottom="11dp">

                    <EditText
                        android:id="@+id/et_folder_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                       android:background="@color/transparent"
                        android:cursorVisible="true"
                        android:paddingLeft="5dp"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz_ 0123456789"
                        android:focusable="true"

                        android:hint="@string/enterFolderName"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:maxLength="50"
                        android:textColor="#000000"
                        android:textColorHint="@color/unselected_txt_color"
                        android:textSize="12dp" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="12dp"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_create"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@drawable/done_btn_bg"

                        android:gravity="center"
                        android:text="@string/create"
                        android:textColor="@color/white"
                        android:textSize="13dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
